fix horizontal scroll bar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -67,7 +67,7 @@
     clear: both;
     width:100%;
     border-right: none;
-    margin: 0 auto;
+    margin: 0 -2% auto;
     height: auto;
   }
 }
